--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.908.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.20",
     "dayjs": "^1.11.18",
+    "multer": "^2.0.2",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
@@ -34,6 +36,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.11.19",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^2.0.16",
